==================================================================================================
Changes for 2.10
==================================================================================================
- Bug Fix (966): RCG FunctionCall.pm now checks that model part has the same number of in/outs as
  defined in the associated user C code function.
- Bug Fix (903): With requireIOcnt=1 set in parameter block of a model, code will not start unless
  the model required number of ADC and DAC modules exist on the run time computer bus.
- Bug Fix (948): ADC channel lists are incorrect when model contains MUX/DEMUX parts. It was also
  noted that this produced incorrect ADC Monitor MEDM screens, which was also corrected as part
  of this fix.
- Bug Fix (894 and 896): Having to do with coeff files and their archives, along with diffs 
  between what is loaded into the real-time code and exists in a modified foton file. For
  details, see T1500592 in DCC.
- Request (831): Added support in FE code to acquire double precision 64bit floats.
- Bug Fix (887): SDF uninitialized table did not allow accepting present settings.
- Request (833): RCG now produces a text file that lists all ADC connections for that model as
  part of the make, make-install process.
  - make command produces build/modelepics/config/adcListSorted.txt
  - make install-model produces a /opt/rtcds/site/ifo/chans/adc/model_adclist.txt file.
- Request (886): Added RCG version number to GDSTP screens.
- Added multi-page listing capabilities for unconnected EDCU channels. Presently, still a work
  in progress.
- Added a new install script, nort- (No real-time). This was added to properly generate
  the start script for EDCU models, which have no real-time component.
- Added a compile option (DUAL_DAQ_DC) for running with 2 data concentrators. Until I think of
  a better solution, this is 'hardwired' in feCodeGen.pl by setting daq2dc = 1. If it is desired